# rozpro-game

./: .gitignore  CMakeLists.txt  README.md
client/: client.cpp  network_client.cpp  network_client.h
common/: game_types.h  protocol.h
server/: server.cpp
